# ismgcc

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: demo.py  tutorial.ipynb
example/demo-results/: GL14L-bwc=0.50-r=3.00-db=0.50-snrth0=0.0-snrth1=5.0-resolution=0.01-pixel-boundaries-wcs.reg  GL14L-bwc=0.50-r=3.00-db=0.50-snrth0=0.0-snrth1=5.0-resolution=0.01-pixel-boundaries.reg
src/ismgcc/: __init__.py  finder.py  post.py  utils.py
test/: test_get_output_suffix.py  test_recorvered_cube.py
